Banco de dados funcionando para login, cadastro de fornecedor,gestãp de usuário

--- a/GestorEstoques/src/gestorestoques/gestaoDeUser.form
+++ b/GestorEstoques/src/gestorestoques/gestaoDeUser.form
@@ -32,7 +32,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="comboFiltro" pref="103" max="32767" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="120" max="-2" attributes="0"/>
+                      <Component id="btn_menuVoltar" min="-2" pref="120" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="btn_userAdd" min="-2" pref="180" max="-2" attributes="0"/>
@@ -55,7 +55,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btn_menuVoltar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="comboFiltro" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -116,7 +116,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_userEditActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btn_menuVoltar">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="0" green="ff" red="0" type="rgb"/>
@@ -124,7 +124,7 @@
         <Property name="text" type="java.lang.String" value="VOLTAR"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_menuVoltarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="comboFiltro">
@@ -132,9 +132,9 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
             <StringItem index="0" value="Todos"/>
-            <StringItem index="1" value="Admin"/>
-            <StringItem index="2" value="Gerente"/>
-            <StringItem index="3" value="Funcion&#xe1;rio"/>
+            <StringItem index="1" value="Administrador"/>
+            <StringItem index="2" value="Gestor"/>
+            <StringItem index="3" value="Operador de estoque"/>
           </StringArray>
         </Property>
       </Properties>
