--- a/GestorEstoques/src/gestorestoques/cadastroFornecedor.form
+++ b/GestorEstoques/src/gestorestoques/cadastroFornecedor.form
@@ -158,6 +158,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="EXCLUIR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_fornecedorExcluirActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_fornecedorVoltar">
       <Properties>
@@ -177,6 +180,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="CADASTRAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_fornecedorCadastrarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_fornecedorEditar1">
       <Properties>
@@ -185,6 +191,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="EDITAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_fornecedorEditar1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
